fixes scrollbar and maing page alignment (#29)

--- a/meal-ui/src/styles/local/partials/2-components/scrollbar-vertical.scss
+++ b/meal-ui/src/styles/local/partials/2-components/scrollbar-vertical.scss
@@ -1,42 +1,42 @@
 /* vertical scrollbar */
-body {
+.scrollbar-vertical {
+	cursor: default;
 	-ms-overflow-style: auto;
 	// only works on Firefox, but future proofing
-	scrollbar-color: #f7f7f7 #6b6b6b;
+	scrollbar-color: var(--background-neutral, #6b6b6b) var(--primary, #9750dd);
 	scrollbar-width: thin;
 }
 
-body::-webkit-scrollbar {
+.scrollbar-vertical::-webkit-scrollbar {
 	width: 8px;
 	resize: none;
 }
 
-body::-webkit-scrollbar-track {
+.scrollbar-vertical::-webkit-scrollbar-track {
 	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	background: #6b6b6b;
+	background: var(--background-neutral, #6b6b6b);
 	border-radius: 12px;
 }
 
-body::-webkit-scrollbar-thumb {
-	cursor: pointer;
+.scrollbar-vertical::-webkit-scrollbar-thumb {
 	border-radius: 12px;
-	background-color: #f7f7f7;
+	background-color: var(--text, #ecedee);
 	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
-body::-webkit-scrollbar-thumb:hover {
-	background-color: #9feb73;
+.scrollbar-vertical::-webkit-scrollbar-thumb:hover {
+	background-color: var(--primary, #9750dd);
 }
 
 /* remove the bottom corner + resizer for a cleaner aesthetic*/
 
-body::-webkit-resizer {
+.scrollbar-vertical::-webkit-resizer {
 	visibility: hidden;
 	display: none;
 	opacity: 0;
 }
 
-body::-webkit-scrollbar-corner {
+.scrollbar-vertical::-webkit-scrollbar-corner {
 	visibility: hidden;
 	display: none;
 	opacity: 0;
